# service_example-main

./: CMakeLists.txt  README.md  package.xml
models/: CService.py  SService.py
src/: client_service.cpp  client_service.py  server_service.cpp  server_service.py
srv/: Archivo_var.srv
