<?xml version="1.0"?>
<package format="2">
  <name>service_example</name>
  <version>0.0.0</version>
  <description>This is a package for examples for ROS services</description>

  <maintainer email="lopez.alexander@pucp.edu.pe">Alexander Lopez</maintainer>
  <license>BSD</license>
  <author email="lopez.alexander@pucp.edu.pe">Alexander Lopez</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <export>
  </export>
</package>